# minesweeper

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: build.yml  test.yml
include/: board.h  cell.h  common.h  gamebutton.h  gamescreen.h  gamesetting.h  mainmenu.h  playingscreen.h  playinstruction.h
resource/: Jersey20-Regular.h  KodeMono-Bold.h  ShareTechMono-Regular.h  flag-icon.h  mine-icon.h
src/: board.cpp  cell.cpp  gamebutton.cpp  gamescreen.cpp  gamesetting.cpp  mainmenu.cpp  playingscreen.cpp  playinstruction.cpp
